[package]
name = "finny"
version = "0.2.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2021"
repository = "https://github.com/hashmismatch/finny.rs"
description = "Finite State Machines with a procedural builder-style API and compile time transition checks."
license = "MIT OR Apache-2.0"
keywords = ["fsm", "state", "state-machine"]
categories = ["data-structures", "algorithms", "rust-patterns", "no-std"]
readme = "../README.md"

[dependencies]
derive_more = { version = "2.0", default-features = false, features = ["from"] }
finny_derive = { path = "../finny_derive", version = "0.2.0" }
arraydeque = { version = "0.5", default-features = false }
slog = { version = "2.7", optional = true, default-features = false }
tracing = { version = "0.1", optional = true, default-features = false }
heapless = { version = "0.8" }

[features]
default = ["std", "inspect_slog", "timers_std"]
std = ["arraydeque/std", "timers_std", "slog/std", "finny_derive/std"]
inspect_slog = ["slog"]
inspect_tracing = ["tracing"]
timers_std = []
generate_plantuml = ["finny_derive/generate_plantuml"]
