[package]
name = "finny_tests"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
publish = false
edition = "2021"

[dependencies]
finny = { path = "../finny/", features = ["inspect_tracing"] }
slog = "2.7"
slog-term = "2.6"
slog-async = "2.6"
tracing = "0.1"
tracing-subscriber = "0.3"
